--- a/src/main/resources/templates/details/user-details.html
+++ b/src/main/resources/templates/details/user-details.html
@@ -7,6 +7,10 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script th:src="@{'/js/user-searcher-favorites.js'}"></script>
+    <link href="https://fonts.cdnfonts.com/css/now" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alkatra&display=swap" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/profile-style.css}">
 </head>
 
@@ -37,32 +41,72 @@
             <img th:src="@{/images/parsley-large.jpg}" alt="Pietruszka na desce" class="hero__image-large">
             <div class="hero__content">
                 <h1>Twój profil</h1>
-                <p>Login: <span th:text="${username}"></span></p>przepisy</p>
-                <p>Email: <span th:text="${email}"></span></p>
+                <div class="profile__data">
+                    <div class="profile__graphic">
+                        <img th:src="@{/images/profile-icon-white.svg}" alt="Ikona profilu" class="profile__image">
+                    </div>
+                    <div class="data__text">
+                        <p th:text="${username}" class="profile__user-name"></p>
+                        <p th:text="${email}" class="profile__email"></p>
+                        <form method="get" th:action="@{/user/{username}/change-profil(username=${username})}">
+                            <button type="submit" class="edit-btn">Edytuj profil</button>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
-
-        <form method="get" th:action="@{/user/{username}/change-profil(username=${username})}">
-            <button type="submit">Edytuj profil</button>
-        </form>
+        </div>
 
         <p th:if="${message}" th:text="${message}"></p>
         <!-- komunikat o zmianie danych z edycji profilu -->
 
+        <!-- <h2>Ulubione przepisy</h2>
+        <section class="slider-wrapper">
+            <button class="slide-arrow" id="slide-arrow-next">
+                <i class="fa-solid fa-chevron-right"></i>
+            </button>
+            <button class="slide-arrow" id="slide-arrow-prev">
+                <i class="fa-solid fa-chevron-left"></i>
+            </button>
+            <ul class="slides-container" id="slides-container">
+                <li th:each="recipe : ${favorites}" class="slide">
+                    <a th:href="@{/recipes/{id}(id=${recipe.id})}" th:text="${recipe.name}" class="fav__text"></a>
+                    <a th:href="@{/recipes/{id}(id=${recipe.id})}" class="silder__img">
+                        <img th:src="${imageUrlMap[recipe.id]}" alt="Obraz przepisu" class="fav__img" />
+                    </a>
+                </li>
+            </ul>
+        </section> -->
 
-        <h2>Ulubione przepisy</h2>
-        <ul>
-            <li th:each="recipe : ${favorites}">
-                <a th:href="@{/recipes/{id}(id=${recipe.id})}" th:text="${recipe.name}"></a>
-                <a th:href="@{/recipes/{id}(id=${recipe.id})}">
-                    <img th:src="${imageUrlMap[recipe.id]}" alt="Obraz przepisu" class="fav__img" />
-                </a>
-            </li>
-        </ul>
+        <h2 class="fav-recipes__h2">Ulubione przepisy</h2>
+        <section class="random-recipes">
+            <ul class="browser__recipes-container">
+                <li th:each="recipe : ${favorites}" class="recipe-container__item">
+                    <div class="test">
+                        <a th:href="@{/recipes/{id}(id=${recipe.id})}" th:text="${recipe.name}"
+                            class="recipe-container__link"></a>
+                        <div class="d-line"></div>
+                    </div>
+                    <!-- <div class="d-line"></div> -->
+                    <a th:href="@{/recipes/{id}(id=${recipe.id})}" class="recipe-img__link">
+                        <img th:src="${imageUrlMap[recipe.id]}" alt="Obraz przepisu" class="recipe__img" />
+                        <div class="overlay"></div>
+                    </a>
+                </li>
+            </ul>
+        </section>
 
         <!-- Inne pola użytkownika, jeśli są -->
 
-        <a th:href="@{/plan/recipes}">Plan i lista zakupów</a>
+        <div class="plan-grocery__wrapper">
+            <a th:href="@{/plan/recipes}">
+                <img th:src="@{/images/StockSnap.jpg}" alt="Spaghetti" class="plan-grocery__image">
+            </a>
+            <div class="plan-grocery__text">
+                <div class="decor-line"></div>
+                <a th:href="@{/plan/recipes}" class="plan-grocery__link"> Zobacz swój plan i listę zakupów</a>
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
@@ -84,6 +128,7 @@
     </footer>
     <script src="https://kit.fontawesome.com/3d3eb47a80.js" crossorigin="anonymous"></script>
     <script th:src="@{/js/burgerMenu.js}"></script>
+    <script th:src="@{/js/slider.js}"></script>
 </body>
 
 </html>
