--- a/src/main/resources/templates/details/recipe-details.html
+++ b/src/main/resources/templates/details/recipe-details.html
@@ -72,6 +72,7 @@
                     <i class="fa-regular fa-clock"></i>
                     <p th:text="${prepareTime} + ' min'" class="prepare-time__text"></p>
                 </div>
+                <p th:text="${portions}"></p>
             </div>
             <div class="ingredients__wrapper">
                 <h2 class="display-recipe-h2">Składniki</h2>
