--- a/src/main/resources/static/css/meal-plan-style.css
+++ b/src/main/resources/static/css/meal-plan-style.css
@@ -20,3 +20,141 @@
 .meal-plan-page {
     font-family: "Now", sans-serif;
 }
+
+/*Header starts*/
+.header {
+  margin-top: 73px;
+  width: 100%;
+  height: 500px;
+}
+.header-img__wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.header-img__wrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+.header__text-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  bottom: 185px;
+}
+.chat-cloud {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  width: 90%;
+  max-width: 400px;
+}
+.header__text {
+  text-align: center;
+  font-size: 24px;
+  line-height: 32px;
+  max-width: 216px;
+}
+.header__h {
+  color: var(--gold);
+  font-size: 24px;
+  font-weight: 700;
+  letter-spacing: 2.7px;
+  text-align: center;
+  margin-top: 10px;
+}
+.gradinet {
+  border-radius: 20px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 60%;
+  background: linear-gradient(to top, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.0), rgba(255, 255, 255, 0.0), rgba(255, 255, 255, 0));
+}
+
+/*Header ends*/
+
+
+/*Meal plan starts*/
+.meal-plan {
+  margin-bottom: 50px;
+}
+.day__text {
+  width: 100%;
+  padding: 12px;
+  color: var(--white);
+  background-color: var(--orange);
+  text-align: center;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.el {
+  height: 330px;
+  width: 260px;
+  position: relative;
+  margin: 30px 0;
+}
+.cook-day {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.cook-day__link {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+.overlay {
+  height: 35%;
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(3px);
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+.day__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 20px;
+  box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.60);
+}
+.cook-day__recipe-info {
+  position: absolute;
+  left: 20px;
+  top: 235px;
+  z-index: 2;
+  max-width: 200px;
+}
+.cook-day__recipe-info a:nth-child(2) {
+  font-size: 17px;
+  color: var(--black);
+}
+.prepare-time {
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 13px;
+}
+.fa-clock {
+  color: var(--gold);
+}
+/*Meal plan ends*/
+
+
+
+
