--- a/src/main/resources/static/css/meal-plan-style.css
+++ b/src/main/resources/static/css/meal-plan-style.css
@@ -32,7 +32,7 @@
   width: 100%;
   height: 100%;
 }
-.header-img__wrapper img {
+.pizza {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -40,15 +40,17 @@
 }
 .header__text-content {
   position: absolute;
-  top: 50%;
+  /* top: 50%; */
+  top: 307px;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
-  bottom: 185px;
+  /* bottom: 185px; */
 }
 .chat-cloud {
   position: absolute;
-  top: 50%;
+  /* top: 50%; */
+  top: 328px;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1;
@@ -70,7 +72,6 @@
   margin-top: 10px;
 }
 .gradinet {
-  border-radius: 20px;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -79,9 +80,7 @@
   height: 60%;
   background: linear-gradient(to top, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.0), rgba(255, 255, 255, 0.0), rgba(255, 255, 255, 0));
 }
-
 /*Header ends*/
-
 
 /*Meal plan starts*/
 .meal-plan {
@@ -156,5 +155,84 @@
 /*Meal plan ends*/
 
 
+/*Grocery list starts*/
+.grocery-list {
+  width: 100%;
+  background-color: var(--light-gray);
+  border-top-right-radius: 40px;
+  border-bottom-left-radius: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px 0;
+}
+.grocery-list__title {
+  color: var(--gold);
+  font-size: 20px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-bottom: 20px;
+}
+.grocery-table {
+  font-size: 14px;
+  color: var(--dark-gray);
+}
+.grocery-table__products {
+  padding-right: 15px;
+}
+.grocery-table__cell {
+  padding-bottom: 8px;
+}
+/*Grocery list ends*/
 
+/*New plan button starts*/
+.new-plan {
+  display: flex;
+  justify-content: center;
+  margin: 80px 40px;
+}
+.new-plan__btn {
+  display: flex;
+  border: solid 2px var(--gold);
+  color: var(--gold);
+  padding: 10px 20px;
+  gap: 10px;
+  align-items: center;
+  font-size: 20px;
+  border-radius: 10px;
+}
+.new-plan__link {
+  color: var(--gold);
+}
+/*New plan button ends*/
+/*Mobile meal plan ends*/
 
+/*Desktop meal plan starts*/
+@media (min-width: 992px) {
+  main {
+    max-width: 1000px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .el {
+    width: 550px;
+  }
+  .day__text {
+    border-radius: 50px;
+  }
+  .pizza {
+    border-bottom-left-radius: 260px;
+    border-bottom-right-radius: 260px;
+  }
+  .meal-plan-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .header {
+    margin-bottom: 40px;
+  }
+
+}
+/*Desktop meal plan ends*/
