--- a/src/main/resources/static/css/login-style.css
+++ b/src/main/resources/static/css/login-style.css
@@ -173,7 +173,7 @@
     font-size: 30px;
     position: absolute;
     top: 10px;
-    left: 460px;
+    left: 90%;
     background-color: transparent;
     color: var(--dark-gray);
 }
