--- a/src/main/resources/static/css/meal-plan-style.css
+++ b/src/main/resources/static/css/meal-plan-style.css
@@ -40,22 +40,20 @@
 }
 .header__text-content {
   position: absolute;
-  /* top: 50%; */
   top: 307px;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
-  /* bottom: 185px; */
 }
 .chat-cloud {
   position: absolute;
-  /* top: 50%; */
   top: 328px;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1;
   width: 90%;
   max-width: 400px;
+  animation: pulseCloud 1s ease-in-out infinite;
 }
 .header__text {
   text-align: center;
@@ -152,6 +150,14 @@
 .fa-clock {
   color: var(--gold);
 }
+.free-day__text {
+  font-size: 17px;
+  color: var(--black);
+}
+.fa-face-smile-wink {
+  color: var(--gold);
+  padding-left: 5px;
+}
 /*Meal plan ends*/
 
 
@@ -233,6 +239,23 @@
   .header {
     margin-bottom: 40px;
   }
+  .gradinet {
+    display: none;
+  }
+  .cook-day__el {
+    transition: transform .4s ease-in-out 0s;
+  }
+  .cook-day__el:hover {
+    transform: scale(1.1);
+  }
+  .new-plan__link:hover .new-plan__btn{
+    background-color: var(--gold);
+    color: var(--white);
+  }
+  .new-plan__link {
+    background-color: var(--gold);
+  }
+
 
 }
 /*Desktop meal plan ends*/
