--- a/src/main/resources/static/css/plan-info-style.css
+++ b/src/main/resources/static/css/plan-info-style.css
@@ -86,6 +86,10 @@ h1 {
     font-size: 16px;
     color: var(--gold);
 }
+.diet-allert {
+    margin-top: 15px;
+    font-size: 12px;
+}
 /*Diet form ends*/
 
 /*Portions form starts*/
