Zmiana przycisku zarejestruj się

--- a/src/main/resources/templates/loginandregister/register.html
+++ b/src/main/resources/templates/loginandregister/register.html
@@ -61,7 +61,7 @@
             <div th:if="${param.success}" class="login-exception__wrapper">
                 <div class="login-exception login-aproved"> Zostałeś zarejestrowany w MealPlanner!</div>
             </div>
-            <button type="submit" class="login-submit-btn">Register</button>
+            <button type="submit" class="login-submit-btn">Zarejestruj się</button>
             <div class="not-registered-info registered-info">
                 <p class="not-registered-info__text">Jesteś już zarejestrowany?</p>
                 <a th:href="@{/login}" class="not-registered-info__link">Zaloguj się tutaj!</a>
