porządkowanie css i html i zmiana napisów na stronie

--- a/src/main/resources/templates/details/user-change.html
+++ b/src/main/resources/templates/details/user-change.html
@@ -54,7 +54,7 @@
                             <a th:href="@{'/user/' + ${username}}" class="cancel-btn">Nie zapisuj zmian</a>
 
                             <p th:if="${error}" th:text="${error}" class="edit-error"></p>
-                            <!-- Wyświetlanie komunikatu o błędzie -->
+                            <!-- error message display -->
                         </form>
                     </div>
                 </div>
