--- a/src/main/resources/templates/home/home-guest.html
+++ b/src/main/resources/templates/home/home-guest.html
@@ -47,11 +47,12 @@
             <img class="plan-info__image" th:src="@{/images/triangle.svg}" alt="trójkąt - od dymku z informacjami">
 
             <div class="plan-info-wrapper">
-                <h2 class="plan-info__header">Wygeneruj spresonalizowany plan posiłków na cały tydzień!</h2>
+                <h2 class="plan-info__header">Wygeneruj spresonalizowany plan posiłków nawet na cały tydzień!</h2>
                 <p class="content plan-info__text">Ten przycisk przeniesie Cię do specjalnego generatora posiłków,
                     gdzie
                     będziesz mógł wybrać dietę, ilość porcji, którą zamierzasz przygotować na dany dzień czy produkty,
-                    których potrzebujesz oraz wiele innych.</p>
+                    których potrzebujesz oraz wiele innych. W każdym dniu otrzymasz przepis, który uwzględnia twoje
+                    preferencje i posiada tak dobrane składniki, żeby nic się nie zmarnowało</p>
                 <p class="content plan-info__ps">
                     Nie zwlekaj i sprawdź co dla Ciebie przygotowaliśmy. </p>
             </div>
@@ -74,7 +75,7 @@
                 </div>
                 <div class="about-us__text-content element">
                     <p class="content about-us__text">MealPlanner oferuje o wiele więcej niż przeglądanie przepisów!
-                        Zarejestruj się, aby otrzymać swój spersonalizowany plan posiłków na cały tydzień już dziś,
+                        Zarejestruj się, aby otrzymać swój spersonalizowany plan posiłków nawet cały tydzień już dziś,
                         dzięki czemu Twój tydzień będzie zorganizowany, a co najważniejsze, nic się nie zmarnuje.
                     </p>
                     <p class="content about-us__ps"> Zarejestruj się i skorzystaj z dodatkowych funkcji naszej
@@ -107,7 +108,6 @@
     </footer>
     <script src="https://kit.fontawesome.com/3d3eb47a80.js" crossorigin="anonymous"></script>
     <script th:src="@{/js/burgerMenu.js}"></script>
-    <script th:src="@{/js/loginForm.js}"></script>
 </body>
 
 </html>
