--- a/src/main/resources/templates/details/recipe-details.html
+++ b/src/main/resources/templates/details/recipe-details.html
@@ -76,7 +76,6 @@
                     <i class="fa-solid fa-utensils"></i>
                     <p th:text="${portions}"></p>
                 </div>
-
             </div>
             <div class="ingredients__wrapper">
                 <h2 class="display-recipe-h2">Składniki</h2>
@@ -102,7 +101,7 @@
                     <i class="fa-regular fa-heart"></i>
                 </button>
             </form>
-            <!-- Inne pola przepisu, jeśli są -->
+            <!-- Different recipe fields if they are -->
         </div>
     </main>
     <footer class="footer">
