--- a/src/main/resources/templates/home/home-user.html
+++ b/src/main/resources/templates/home/home-user.html
@@ -48,11 +48,12 @@
         <section class="plan-info container">
             <img class="plan-info__image" th:src="@{/images/triangle.svg}" alt="trójkąt - od dymku z informacjami">
             <div class="plan-info-wrapper">
-                <h2 class="plan-info__header">Wygeneruj spresonalizowany plan posiłków na cały tydzień!</h2>
+                <h2 class="plan-info__header">Wygeneruj spresonalizowany plan posiłków nawet na cały tydzień!</h2>
                 <p class="content plan-info__text">Ten przycisk przeniesie Cię do specjalnego generatora posiłków,
                     gdzie
                     będziesz mógł wybrać dietę, ilość porcji, którą zamierzasz przygotować na dany dzień czy produkty,
-                    których potrzebujesz oraz wiele innych.</p>
+                    których potrzebujesz oraz wiele innych. W każdym dniu otrzymasz przepis, który uwzględnia twoje
+                    preferencje i posiada tak dobrane składniki, żeby nic się nie zmarnowało</p>
                 <p class="content plan-info__ps">
                     Nie zwlekaj i sprawdź co dla Ciebie przygotowaliśmy. </p>
             </div>
@@ -67,12 +68,10 @@
                 </div>
                 <div class="about-us__text-content element">
                     <p class="content about-us__text">MealPlanner oferuje o wiele więcej niż wygenerowanie planu
-                        posiłków.
-                        Poprzez zakładkę Zarządzaj przepisami, możesz edytować, dodawać nowe oraz usuwać
-                        przepisy.
+                        posiłków. Dodawaj przepisy do ulubionych, a one będą na ciebie czekać w profilu.
                     </p>
                     <p class="content about-us__ps">
-                        Dodatkowo po stworzeniu planu możesz wygodnie pobrać listę zakupów, dzięki czemu nie zapomnisz o
+                        Dodatkowo po stworzeniu planu aplikacja wyświetli listę zakupów, dzięki czemu nie zapomnisz o
                         żadnym składniku!</p>
                 </div>
                 <div class="recipes element">
