--- a/src/main/resources/templates/plangenerator/plan-info.html
+++ b/src/main/resources/templates/plangenerator/plan-info.html
@@ -45,17 +45,19 @@
             <h1> Jak działa generator planu posiłków? </h1>
             <p class="header__text">Aby otrzymać spersonalizowany plan posiłków, wypełnij poniższy formularz składający
                 się z 6 pytań, dotyczących twoich preferencji żywieniowych</p>
-            <p class="header__text">Klikając przycisk zatwierdź, plan na cały tydzień zostaje utworzony i zapisany w
-                Twoim profilu. Plan możesz w każdej chwili edytować.</p>
+            <p class="header__text">Klikając przycisk zatwierdź, plan nawet na cały tydzień zostaje utworzony i zapisany
+                w
+                Twoim profilu. Jeśli wygenerowny plan Ci się nie spodoba, w każdej chwili możesz wygenerować nowy plan z
+                tymi samymi preferencjami</p>
             <p class="header__text">Do dzieła!</p>
         </div>
         <img th:src="@{/images/triangle.svg}" alt="trójkąt - od dymku z informacjami" class="chat-triangle">
     </header>
     <div th:if="${param.error}">
-        <div>Invalid Email or Password</div>
+        <div>Niepoprawny email lub hasło</div>
     </div>
     <div th:if="${param.logout}">
-        <div> You have been logged out.</div>
+        <div>Zostałeś wylogowany</div>
     </div>
     <main>
         <form method="post" th:action="@{/plan/info}" th:object="${info}" class="planner-form">
@@ -64,10 +66,6 @@
                     <p class="question-number">1.</p>
                     <label class="diet-form__question">Wybierz rodzaj diety:</label>
                 </div>
-
-                <!-- <input type="text" id="diet" name="diet" class="form-control" placeholder="Rodzaj diety"
-                        th:field="*{preferences.diet}" />
-                    <input type=""> -->
                 <div class="diet-types__wrapper">
                     <select th:field="*{preferences.diet}" class="diet-types__select" required>
                         <option value="" selected>Wybierz dietę</option>
@@ -78,18 +76,14 @@
                     </select>
                 </div>
             </div>
-
             <div class="portions-form form-basis">
                 <div class="diet-form__header subform__header">
                     <p class="question-number">2.</p>
                     <label class="diet-form__question">Ile porcji przygotowujesz?</label>
                 </div>
                 <div class="portions-bar">
-                    <!-- <input type="number" min="1" id="portions" name="portions" placeholder="Ilość porcji"
-                        th:field="*{preferences.numberOfPortions}" /> -->
                     <input type="range" id="numberInput" name="numberInput" min="1" max="15" value="1"
                         th:field="*{preferences.numberOfPortions}">
-                    <!-- zmieniłam tuu -->
                     <div class="portions-info">
                         <p class="portion-text">Ilość porcji: <span id="selectedNumber">1</span></p>
                     </div>
